<resources>
    <string name="app_name">Lab06-Notes Kashitsin</string>
    <string name="NEW">ДОБАВИТЬ</string>
    <string name="EDIT">ИЗМЕНИТЬ</string>
    <string name="DELETE">УДАЛИТЬ</string>
    <string name="title">Заголовок</string>
    <string name="content">Содержание</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="cancel">ОТМЕНИТЬ</string>
    <string name="author">Кашицын,393</string>
</resources>